--- a/monitoring.html
+++ b/monitoring.html
@@ -438,8 +438,8 @@
           <div>
             <h1><span>О</span>перативное реагирование на инциденты:</h1>
             <p>
-              <span>Б</span>ыстрое выявление и устранение сбоев и проблем,
-              возникающих в IT-инфраструктуре компании.
+              <span>О</span>перативное обнаружение и устранение неисправностей и проблем в IT-инфраструктуре вашей
+              компании, чтобы минимизировать простои и обеспечить бесперебойную работу.
             </p>
           </div>
         </div>
@@ -505,8 +505,8 @@
           <div>
             <h1><span>А</span>нализ инцидентов и причин их возникновения:</h1>
             <p>
-              <span>П</span>роведение пост-инцидентного анализа для выявления
-              первопричин.
+              <span>П</span>роведение анализа после инцидента для выявления коренных причин и предотвращения
+              повторения проблем в будущем
             </p>
           </div>
         </div>
@@ -683,8 +683,8 @@
           <div>
             <h1><span>П</span>роактивное предупреждение инцидентов:</h1>
             <p>
-              <span>П</span>редсказание потенциальных проблем на основе
-              мониторинга и анализа данных.
+              <span>П</span>рогнозирование и предотвращение потенциальных проблем за счет постоянного мониторинга и
+              анализа данных
             </p>
           </div>
         </div>
@@ -695,9 +695,9 @@
         <div class="text__form_content">
           <h1><span>О</span>бсудим ваш проект?</h1>
           <p>
-            <span>О</span>ставьте ваши контакты и мы ответим на все ваши
-            вопросы, а также подберем оптимальный набор услуг, который будет
-            соответствовать вашим потребностям.
+            <span>П</span>ожалуйста, оставьте свои контактные данные, и мы с удовольствием ответим на все ваши
+            вопросы и предложим индивидуальный пакет услуг, который идеально подойдет вашим
+            потребностям.
           </p>
           <div class="svg__form_content">
             <svg
@@ -883,8 +883,35 @@
       </div>
     </section>
     <footer class="footer standard_container bg_content indent">
-      <h1><span>L</span>ets <span>S</span>erv</h1>
-      <p>Все права защищены 2022-2024</p>
+      <div class="footer__not_all-p">
+        <p>©2022-2025</p>
+        <p>Все права защищены</p>
+        <div>
+          <a target="_blank" href="mailto:letsserv@yandex.ru">
+            <svg id="Layer_1" enable-background="new 0 0 250 250" viewBox="0 0 250 250" xmlns="http://www.w3.org/2000/svg"><g clip-rule="evenodd" fill-rule="evenodd"><path d="m250.4 124.9c0 68.9-55.7 124.8-124.6 125h-.8c-1 0-1.9 0-2.9 0-67.5-1.8-121.7-57-121.7-125s54.2-123.2 121.7-124.9h2.9.8c68.9.2 124.6 56 124.6 124.9z" fill="#ff5439"></path><path d="m189.5 70.6h-124.6c-5.2 0-9.4 4.2-9.4 9.4v94.4c0 1.4.6 2.6 1.5 3.5s2.2 1.5 3.5 1.5c2.8 0 5-2.2 5-5v-93.8h124c1.4 0 2.6-.6 3.5-1.5s1.5-2.2 1.5-3.5c0-2.8-2.2-5-5-5zm-18.6 28.8c-8.8 7.5-40.2 35.5-40.2 35.5-1.5 1.3-3.4 1.9-5.2 1.7-1.5-.2-2.9-.9-4-2l-36.2-37.2-7.3 6.8 39.5 40.9c2.1 2.3 5 3.5 7.9 3.6s5.8-.8 8.1-2.9l46.7-40.3c1.6-1.5 4.2-1.9 4.2 1.9v50.7c0 6.2-5 11.3-11.3 11.3h-91.5v10h91.8c11.7 0 21.1-9.5 21.1-21.1v-53.1c0-11.2-14.9-13.3-23.6-5.8z" fill="#fff"></path><path d="m250.4 124.9c0 68.9-55.7 124.8-124.6 125h-.4v-250h.4c68.9.3 124.6 56.1 124.6 125z" fill="#e24737"></path><g fill="#e1e1e1"><path d="m189.5 80.6h-64.1v-10h64.1c2.8 0 5 2.2 5 5 0 1.4-.6 2.6-1.5 3.5-.9 1-2.1 1.5-3.5 1.5z"></path><path d="m194.5 105.2v53.1c0 11.7-9.5 21.1-21.1 21.1h-48v-10h47.8c6.2 0 11.3-5 11.3-11.3v-50.7c0-3.8-2.6-3.4-4.2-1.9l-46.7 40.3c-2.3 2.1-5.2 3-8.1 2.9v-12.2c1.8.2 3.8-.3 5.2-1.7 0 0 31.4-28 40.2-35.5 8.7-7.4 23.6-5.3 23.6 5.9z"></path></g></g></svg>
+        </a>
+        <a target="_blank" href="https://rutube.ru/channel/26784998/">
+          <svg width="132" height="132" viewBox="0 0 132 132" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_519_1980)">
+            <rect width="132" height="132" fill="#100943"/>
+            <path d="M132 66.0001C168.451 66.0001 198 36.4508 198 3.05176e-05C198 -36.4508 168.451 -66 132 -66C95.5492 -66 66 -36.4508 66 3.05176e-05C66 36.4508 95.5492 66.0001 132 66.0001Z" fill="#ED143B"/>
+            <path d="M81.5361 62.9865H42.5386V47.5547H81.5361C83.814 47.5547 85.3979 47.9518 86.1928 48.6451C86.9877 49.3385 87.4801 50.6245 87.4801 52.5031V58.0441C87.4801 60.0234 86.9877 61.3094 86.1928 62.0028C85.3979 62.6961 83.814 62.9925 81.5361 62.9925V62.9865ZM84.2115 33.0059H26V99H42.5386V77.5294H73.0177L87.4801 99H106L90.0546 77.4287C95.9333 76.5575 98.573 74.756 100.75 71.7869C102.927 68.8179 104.019 64.071 104.019 57.7359V52.7876C104.019 49.0303 103.621 46.0613 102.927 43.7857C102.233 41.51 101.047 39.5307 99.362 37.7528C97.5824 36.0698 95.6011 34.8845 93.2223 34.0904C90.8435 33.3971 87.8716 33 84.2115 33V33.0059Z" fill="white"/>
+            </g>
+            <defs>
+            <clipPath id="clip0_519_1980">
+            <rect width="132" height="132" rx="66" fill="white"/>
+            </clipPath>
+            </defs>
+            </svg>  
+        </a>
+        <a target="_blank" href="https://t.me/+79157792861">
+          <svg version="1.1" id="Capa_10" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><circle style="fill:#41B4E6;" cx="255.997" cy="256" r="255.997"></circle><path style="fill:#0091C8;" d="M512,256.003c0-6.238-0.235-12.419-0.673-18.546L405.228,131.36L106.772,248.759l114.191,114.192 l1.498,5.392l1.939-1.955l0.008,0.008l-1.947,1.947L348.778,494.66C444.298,457.5,512,364.663,512,256.003z"></path><polygon style="fill:#FFFFFF;" points="231.138,293.3 346.829,380.647 405.228,131.36 106.771,248.759 197.588,278.84 363.331,167.664 "></polygon><polygon style="fill:#D2D2D7;" points="197.588,278.84 222.461,368.344 231.138,293.3 363.331,167.664 "></polygon><polygon style="fill:#B9B9BE;" points="268.738,321.688 222.461,368.344 231.138,293.3 "></polygon></svg>
+      </a>
+      <a target="_blank" href="https://wa.me/79157792861?text=Привет! Хочу записаться на консультацию">
+          <svg version="1.1" id="Layer_19" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><circle style="fill:#75B73B;" cx="256" cy="256" r="256"></circle><path style="fill:#52891D;" d="M360.241,151.826c-14.843-3.712-36.671-16.532-50.8-21.671 c-55.165-17.239-129.293-3.448-149.98,60.337c-1.724,1.724-5.172,1.724-6.896,1.724c-41.374,48.269-13.791,106.882-17.239,160.323 c-1.177,18.839-11.083,35.497-23.831,49.588l107.282,107.17C230.931,511.067,243.355,512,256,512 c126.436,0,231.452-91.665,252.247-212.161L360.241,151.826z"></path><g><path style="fill:#FFFFFF;" d="M248.837,108.447c-78.029,3.712-139.604,68.696-139.369,146.811 c0.072,23.792,5.816,46.249,15.95,66.095l-15.557,75.514c-0.841,4.086,2.843,7.663,6.901,6.701l73.995-17.53 c19.011,9.471,40.364,14.939,62.962,15.284c79.753,1.219,146.251-62.105,148.74-141.829 C405.121,174.035,334.591,104.362,248.837,108.447L248.837,108.447z M337.13,335.936c-21.669,21.669-50.483,33.604-81.13,33.604 c-17.944,0-35.126-4.027-51.066-11.966l-10.302-5.134l-45.37,10.747l9.549-46.356l-5.075-9.943 c-8.276-16.206-12.472-33.728-12.472-52.084c0-30.648,11.935-59.459,33.604-81.13c21.476-21.478,50.759-33.604,81.134-33.604 c30.644,0,59.458,11.935,81.127,33.604c21.669,21.669,33.604,50.483,33.604,81.127C370.735,285.177,358.607,314.459,337.13,335.936 L337.13,335.936z"></path><path style="fill:#FFFFFF;" d="M327.115,286.582l-28.384-8.149c-3.729-1.069-7.749-0.01-10.468,2.76l-6.942,7.07 c-2.926,2.984-7.366,3.941-11.24,2.374c-13.427-5.434-41.672-30.548-48.881-43.106c-2.084-3.624-1.739-8.152,0.817-11.462 l6.058-7.839c2.374-3.07,2.874-7.197,1.305-10.747l-11.941-27.008c-2.86-6.468-11.126-8.352-16.527-3.784 c-7.921,6.701-17.32,16.88-18.461,28.16c-2.015,19.887,6.515,44.954,38.762,75.055c37.257,34.778,67.094,39.369,86.523,34.664 c11.019-2.667,19.825-13.365,25.379-22.126C336.906,296.467,333.91,288.535,327.115,286.582L327.115,286.582z"></path></g><g><path style="fill:#D1D1D1;" d="M356.004,147.708l-22.223,22.778c1.131,1.045,2.257,2.096,3.351,3.191 c21.67,21.669,33.604,50.483,33.604,81.127c0,30.375-12.128,59.656-33.604,81.134c-21.669,21.669-50.483,33.604-81.13,33.604 c-17.944,0-35.125-4.027-51.066-11.966l-10.302-5.134l-45.37,10.747l0.938-4.553l-40.174,41.172 c0.886,2.663,3.705,4.475,6.734,3.758l73.995-17.53c19.011,9.471,40.364,14.939,62.962,15.284 c79.753,1.219,146.253-62.105,148.74-141.829C403.834,215.357,385.686,175.435,356.004,147.708z"></path><path style="fill:#D1D1D1;" d="M327.115,286.582l-28.384-8.149c-3.729-1.069-7.749-0.01-10.468,2.76l-6.942,7.07 c-2.926,2.984-7.366,3.941-11.24,2.374c-7.756-3.139-20.451-12.845-31.185-22.904l-19.732,20.225 c0.677,0.648,1.352,1.295,2.05,1.948c37.257,34.778,67.094,39.369,86.523,34.664c11.019-2.667,19.825-13.365,25.379-22.126 C336.906,296.467,333.91,288.535,327.115,286.582z"></path></g></svg>
+      </a>
+        </div>
+      </div>
     </footer>
     <script src="assets/js/index.js"></script>
   </body>
