--- a/stands.html
+++ b/stands.html
@@ -317,6 +317,10 @@
       <div class="line"></div>
       <div class="content__stands_shop">
         <h1><span>У</span>чебные cтенды</h1>
+        <div class="video__stand">
+          <iframe width="720" height="405" src="https://rutube.ru/play/embed/973dc6b51d4225a2cf2919044ad998a0/" frameBorder="0" allow="clipboard-write; autoplay" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        </div>
+        <div class="line"></div>
         <div class="wrapper_stands" id="wrapperCard">
           <div class="card_stands">
             <img src="assets/imges/st1/01_Dozor_01.jpg" alt="" />
