--- a/index.html
+++ b/index.html
@@ -292,8 +292,7 @@
     <section class="container__about bg_content standard_container container__bg_gradient indent">
       <div class="contetn__about_one standard_content content_info">
         <div class="text__solving_problemsabout_content-info">
-          <h1><span>L</span>ets <span>S</span>erv</h1>
-          <h2><span>П</span>ланирование и реализация вашей IT инфраструктуры</h2>
+          <h1><span>L</span>ets <span>S</span>erv - планирование и реализация вашей IT инфраструктуры</h1>
           <p>
             <span>М</span>ы подберем вам подходящее оборудование и настроим его
             под ваши нужды
