--- a/stands.html
+++ b/stands.html
@@ -388,7 +388,7 @@
       </div>
     </section>
     <section class="container__advantages standard_container bg_content">
-      <h1 class="indent"><span>I</span>T стенд это</h1>
+      <h1 class="indent"><span>У</span>чебный стенд это</h1>
       <div class="wrapper__advantages wrapper__monitoring indent">
         <div class="card card_1">
           <svg
